# duke3d-matrix-esphome

./: .gitignore  .gitmodules  README.md  esphome.yaml  partitions.csv  pre_build.py  secrets.yaml.template  test-minimal.yaml
components/duke3d/: CMakeLists.txt  __init__.py  audiolib_stubs.c  ble_gamepad.cpp  ble_gamepad.h  conio.h  dos.h  duke3d_component.cpp  duke3d_component.h  duke3d_wifi_sync.h  duke_reload.h  engine_main_shim.c  esp32_hal.cpp  esp32_hal.h  flash_tiles.cpp  flash_tiles.h  input.cpp  input.h  nimble_gamepad.cpp  nimble_gamepad.h  pico_gamepad_generated.h  pico_uart_gamepad_labels.h  renderer.cpp  renderer.h  sdl_stubs.c  tilecache.cpp  tilecache.h  usb_gamepad.cpp  usb_gamepad.h
components/duke3d/platform/: esp32_hal.cpp  input.cpp  input.h
components/duke3d/renderer/: renderer.h
components/hub75_matrix/: CMakeLists.txt  __init__.py  grp_title_splash.h  hub75_matrix.cpp  hub75_matrix.h
components/hud/: CMakeLists.txt  __init__.py  font_5x7.h  hud.cpp  hud.h  weather_icons.h
components/i2s_audio/: CMakeLists.txt  __init__.py  i2s_audio.cpp  i2s_audio.h
components/sd_card/: CMakeLists.txt  __init__.py  sd_card.cpp  sd_card.h  sd_open_trace.c  sd_open_trace.h
components/stdout_fix/: __init__.py  stdout_fix.h
docs/: README.md  duke3d-matrix.md  flash-tiles-plan.md  music-streaming-proposal.md  nimble-migration-plan.md  opl2-music-emulation.md
docs/superpowers/plans/: 2026-03-17-duke3d-esp32-matrix.md  2026-04-07-ble-gamepad.md
docs/superpowers/specs/: 2026-03-17-duke3d-esp32-matrix-design.md  2026-03-25-duke3d-engine-smoke-test.md  2026-04-07-ble-gamepad-design.md
libs/duke3d-engine-smoke/: library.json
libs/duke3d-engine-smoke/src/: engine_fixedPoint_math.c
pico/: README.md
pico/usb_hid_uart_bridge/: CMakeLists.txt  main.c  pico_sdk_import.cmake  tusb_config.h
test/: CMakeLists.txt
test/hub75_matrix/: test_color.cpp
test/hud/: test_hud_layout.cpp
test/i2s_audio/: test_write_pcm.cpp
test/input/: test_input_queue.cpp
test/mock/: hub75_mock.h
test/renderer/: test_downscaler.cpp
test/sd_card/: test_grp_detection.cpp
tools/: find_ble_gamepad.py  make_tile_bin.py
